# open-pico-local-api

./: LICENSE  README.md  bump_version.sh  example_auto_discovery.py  pico_auto_discovery.py  pico_client.py  pyproject.toml  run_tests.sh  shared_transport_manager.py
.github/agents/: coding.md  debug.md  pull-request-description.md
.github/workflows/: publish.yml  tests.yml
docs/: architecture.md  auto-discovery.md  command-flow.md  connection-lifecycle.md  retry-logic.md
enums/: device_mode_enum.py
examples/: README.md  adaptive_climate.py  auto_discovery.py  basic_control.py  idp_diagnostic.py  maintenance.py  monitoring.py  multi_device.py
exceptions/: connection_error.py  not_supported_error.py  pico_connection_error.py  pico_device_error.py  pico_timeout_error.py  timeout_error.py
models/: device_info_model.py  operating_parameters_model.py  pico_device_model.py  sensor_readings_model.py
open_pico_local_api/: __init__.py  pico_auto_discovery.py  pico_client.py  shared_transport_manager.py
open_pico_local_api/enums/: on_off_state_enum.py  target_humidity_enum.py
open_pico_local_api/exceptions/: not_supported_error.py  pico_connection_error.py  pico_device_error.py  pico_timeout_error.py
open_pico_local_api/models/: command_response_model.py  device_info_model.py  operating_parameters_model.py  parameter_arrays_model.py  pico_device_model.py  sensor_readings_model.py  system_info_model.py
open_pico_local_api/utils/: auto_reconnect.py  constants.py  pico_protocol.py
scripts/: bump_version.sh  run_tests.sh
tests/: test_auto_reconnect.py  test_enums.py  test_exceptions.py  test_models.py  test_pico_auto_discovery.py  test_pico_protocol.py  test_shared_transport_manager.py
utils/: auto_reconnect.py  constants.py  functions.py  pico_protocol.py  quick_functions.py  utils_functions.py
