[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "open-pico-local-api"
version = "2.2.0"
description = "Async Python library for Tecnosystemi Pico HVAC/ventilation IoT devices"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
keywords = ["pico", "hvac", "iot", "asyncio", "home-assistant"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Framework :: AsyncIO",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["enums*", "exceptions*", "models*", "utils*"]

[tool.setuptools]
py-modules = [
    "pico_client",
    "pico_auto_discovery",
    "shared_transport_manager",
]
