[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "open-pico-local-api"
version = "2.5.2"
description = "Async Python library for Tecnosystemi Pico HVAC/ventilation IoT devices"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
keywords = ["pico", "hvac", "iot", "asyncio", "home-assistant"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Framework :: AsyncIO",
]

[project.urls]
Homepage = "https://github.com/VoidElle/open-pico-local-api"
Source = "https://github.com/VoidElle/open-pico-local-api"
"Bug Tracker" = "https://github.com/VoidElle/open-pico-local-api/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["open_pico_local_api*"]
